theme.css
@font-face {
    font-family: 'pf_tempesta_sevenregular';
    src: url('fonts/pf_tempesta_seven-webfont.woff2') format('woff2');
    font-weight: normal;
    font-style: normal;
    font-display: swap;
}

@font-face {
    font-family: 'fondamentoregular';
    src: url('fonts/fondamentoregular.woff2') format('woff2');
    font-weight: normal;
    font-style: normal;
    font-display: swap;
}

body {
	background-color: #0a080d;
	color: #37649b;
	font-size: 8px;
	font-family: 'pf_tempesta_sevenregular', 'Monaco', 'arial', 'sans-serif';
	font-smooth: never;
	-webkit-font-smoothing : none;
	-webkit-backface-visibility: hidden;
	-moz-backface-visibility:    hidden;
	-ms-backface-visibility:     hidden;
}


#gameIntro {
	background-color: #0a080d;
	background-image: url('assets/page-bg.webp');
	background-repeat: no-repeat;
	background-position: center top;
	background-size: cover;
	position: fixed;
	top:0;
	bottom: 0;
	left: 0;
	right: 0;
	-webkit-transition: 0.5s;
	   -moz-transition: 0.5s;
	    -ms-transition: 0.5s;
	     -o-transition: 0.5s;
		    transition: 0.5s;
}

	.btn {
		border: 1px solid #37649b;
		color: #fff;
		cursor: pointer;
		display: inline-block;
		/*font-family: 'helvetica', 'arial', 'sans-serif';
		font-size: 0.9em;*/
		padding:4px 10px;
		text-transform: uppercase;
	}
	.btn-start {
		position: absolute;
		top:280px;
		left:280px;
	}
	.progress {
		border: 1px solid #37649b;
		color:#fff;
		display: none;
		/*font-size: 0.8em;*/
		position: absolute;
		top:280px;
		left:210px;
		width:200px;
		height: 24px;
	}
		.progress-bar {
			background-color: #37649b;
			position: absolute;
			top: 0;
			width: 0;
			height: 24px;
			-webkit-transition: 0.1s;
		       -moz-transition: 0.1s;
		        -ms-transition: 0.1s;
		         -o-transition: 0.1s;
			        transition: 0.1s;
		}
		.loading-text {
			position: absolute;
			top: 0;
			width: 200px;
			height: 24px;
			padding-top: 4px;
			text-align: center;
		}

.faded {
	opacity: 0;
}

h1 {
	font-size: 72px;
	color : yellow;
	position: absolute;
	opacity:0.3;
	margin-top: 25px;
	top:0px;
	left:75px;
	font-family: 'fondamentoregular', 'serif';
	font-smooth: always !important;
	-webkit-font-smoothing: antialiased !important;
}

#game {
	background-color: #333;
	position: absolute;
	top:150px;
	left:75px;
}

#fight {
	color: #fff;
	font-size: 1.4em;
	font-weight: bold;
	position: absolute;
	top:200px;
	left:100px;
	height:40px;
	width: 80px;
}
	.damage, .hit {
		/*background-color: rgba(0,0,0,0.7);*/
		border-radius: 4px;
		padding: 5px;
		text-shadow:1px 1px #000;
		opacity: 0;
		-webkit-transition: 0.3s;
		   -moz-transition: 0.3s;
		    -ms-transition: 0.3s;
		     -o-transition: 0.3s;
			    transition: 0.3s;
	}
	.damage {
		/*background-color: rgba(194,5,26,0.7);*/
		float: right;
		/*color: red;*/
	}
	.hit {
		/*background-color: rgba(5,180,5,0.7);*/
		float: left;
		/*color: green;*/
	}

	.dealing .hit {
		opacity: 1;
		-webkit-transform:translate3d(-20px, -30px, 0);
	}
	.taking .damage {
		opacity: 1;
		-webkit-transform:translate3d(20px, 30px, 0);
	}

#battleLog {
	position : absolute;
	top : 250px;
	left : 450px;
	height: 250px;
	width: 200px;
	overflow-y: scroll;
	border-top: double gray 1px;
	/*font-size: 8px;
	font-family: 'pf_tempesta_sevenregular', 'Monaco', 'arial', 'sans-serif';*/
}

.poor {
	color : gray;
}

.normal {
	color : white;
}

.rare {
	color : green;
}

.epic {
	color : yellow;
}

.legendary {
	color : orange;
}
#healthBarBox {
	position : absolute;
	top : 150px;
	left : 450px;
	height: 15px;
	width: 200px;
	font-size: 8px;
	background-color : rgba(255,255,255,0.5);
	text-align: center;
	border-radius: 3px;
	-webkit-transition: 0.3s;
	   -moz-transition: 0.3s;
	    -ms-transition: 0.3s;
	     -o-transition: 0.3s;
		    transition: 0.3s;
}
#healthBar {
	position: relative;
	height: 15px;
	width: 200px;
	/*font-size: 12px;*/
	background-color : red;
	text-align: center;
	line-height : 20px;
	z-index: 999;
	border-radius: 3px;
	-webkit-transition: 0.3s;
	   -moz-transition: 0.3s;
	    -ms-transition: 0.3s;
	     -o-transition: 0.3s;
		    transition: 0.3s;
}
#stay {
	position : absolute;
	top : 0px;
	left : 0px;
	height: 15px;
	width: 200px;
	line-height : 15px;
	z-index: 1000;
	text-align: center;
	color: black;
	/*font-family : serif;
	font-weight: bold;*/
}

#battleLog .restart {
	position : absolute;
	left : 55px;
}
.hidden {
	display: none;
}
#charPane {
	position : absolute;
	top : 150px;
	left : 450px;
	height: 350px;
	width: 400px;
	/*font-size: 10px;*/
	-webkit-transition: 0.3s;
	   -moz-transition: 0.3s;
	    -ms-transition: 0.3s;
	     -o-transition: 0.3s;
		    transition: 0.3s;
}
#gear{
	position : absolute;
	top : 0px;
	left : 205px;
	height: 350px;
	width: 200px;
}
#stats{
	position : absolute;
	top : 20px;
	left : 0px;
	height: 80px;
	width: 200px;
}
.slot {
	display: inline-block;
	width: 199px;
}
.stat {
	display: inline-block;
	width: 80px;
	text-align: left;
}
.right {
	text-align: right;
	width: 10px;
	display: inline-block;
	padding-right: 10px;
}
.header {
	color: black;
	text-align: center;
	color: white;
	/*font-weight: bold;
	font-family: serif;
	font-size: 12px;*/
	text-align: left;
}

::-webkit-scrollbar { 
    display: none; 
}

